0.0.0.2
-------

- thanks to a new system-filepath, we now have Stringable instances

0.0.0.1
-------

- initial checkin
- internable MultiChar characters
