@@ -25,6 +25,7 @@ library
   build-depends:
     base                  >3 && <5  ,
     bytestring            >= 0.10.4 ,
+    deepseq               >= 1.3    ,
     hashable              >= 1.2    ,
     intern                >= 0.9    ,
     stringable            >= 0.1.2  ,
