@@ -2,6 +2,7 @@
 -------
 
 - thanks to a new system-filepath, we now have Stringable instances
+- NFData instances
 
 0.0.0.1
 -------
